<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="isError"
            type="Boolean" />

        <variable
            name="isLoading"
            type="Boolean" />

        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/oliveboard"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_icn_search"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/color_33000000"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_below="@id/search_bar"
            android:visibility="@{safeUnbox(isError) ? View.GONE : View.VISIBLE}"
            android:layout_marginTop="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_list"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:visibility="@{safeUnbox(isLoading) ? View.GONE : View.VISIBLE}"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_bar"
            android:background="@color/white"
            android:visibility="@{safeUnbox(isError) ? View.VISIBLE : View.GONE}"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_centerInParent="true"
                android:id="@+id/tv_error"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_error"
                android:layout_centerHorizontal="true"
                android:id="@+id/tv_error_btn"
                android:background="@drawable/tv_error_bg"
                android:text="@string/retry"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"/>

        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="@{safeUnbox(isLoading) ? View.VISIBLE : View.GONE}"/>



    </RelativeLayout>
</layout>

